--- a/rpt0803.html
+++ b/rpt0803.html
@@ -5,58 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1></h1>
-    <h2></h2>
-    <h3></h3>
-    <h4></h4>
-    <h5></h5>
-    <h6></h6>
-    <p></p>
-    <pre>
-
+<body style="display: flex; flex-direction: column; width: 200px;"  >
+    <h1>1 글씨</h1>
+    <h2>2 글씨</h2>
+    <h3>3 글씨</h3>
+    <h4>4 글씨</h4>
+    <h5>5 글씨</h5>
+    <h6>6 글씨</h6>
+    <p>숫자에 크기가 달라짐</p>
+    <pre>   
+        asdf asdf asdf asdf 
+               내 맘대로 작업 가능
     </pre>
-
     <br>
+    1칸 뛰기
     <hr>
-    <strong></strong>
-    <em></em>
-    <p></p>
+    1줄 귿기
+    <strong>두꺼운 글씨</strong>
+    <em> 이 친구도</em>
 
-    <a href="#"></a>
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <input type="text">
 
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <a href="naver.com">naver로 이동 가능</a>
+    <input type="text">
+    <input type="number">
+    <input type="date">
+    <input type="radio">
+    <input type="file">
+    입력 가능한 창
+    <textarea name="" id="" cols="30" rows="10">많은 글을 입력할떄 씀</textarea>
 
     <select name="" id="">
-        <option value=""></option>
-        <option value=""></option>
+        <option value="">1번 </option>
+        <option value="">2번 </option>
     </select>
-
+    선택 가능
     <table>
         <tr>
-            <th></th>
-            <th></th>
+            <th>학번</th>
+            <th>이름</th>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>20607</td>
+            <td>김규태</td>
         </tr>
     </table>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>왼쪽 동그라미</li>
+        <li>1. ㅁㄴㅇㄹ</li>
+        <li>2. asdf</li>
     </ul>
 
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>왼쪽 숫자</li>
+        <li>1. ㅁㄴㅇㄹ</li>
+        <li>2. asdf</li>
     </ol>
 
 </body>
