--- a/rpt0803.html
+++ b/rpt0803.html
@@ -6,21 +6,22 @@
     <title>Document</title>
 </head>
 <body style="display: flex; flex-direction: column; width: 200px;"  >
-    <h1>1 글씨</h1>
-    <h2>2 글씨</h2>
-    <h3>3 글씨</h3>
-    <h4>4 글씨</h4>
-    <h5>5 글씨</h5>
-    <h6>6 글씨</h6>
-    <p>숫자에 크기가 달라짐</p>
+    <h1>h1 글씨</h1>
+    <h2>h2 글씨</h2>
+    <h3>h3 글씨</h3>
+    <h4>h4 글씨</h4>
+    <h5>h5 글씨</h5>
+    <h6>h6 글씨</h6>
+    <p> p 숫자에 크기가 달라짐</p>
     <pre>   
+        pre
         asdf asdf asdf asdf 
                내 맘대로 작업 가능
     </pre>
     <br>
-    1칸 뛰기
+    br 1칸 뛰기
     <hr>
-    1줄 귿기
+    h1 줄 귿기
     <strong>두꺼운 글씨</strong>
     <em> 이 친구도</em>
 
